[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "test-repo"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]
requires-python = ">= 3.8"

# As a rule of thumb, the dependencies should be specified with lower bound
# only.
#
# For pratical reasons, when choosing the lower bound, we pick the oldest
# version we can easily install and test, even if there are older versions with
# the same API.
dependencies = [
    "numpy",
]

[project.optional-dependencies]
polars = ["polars", ]

[tool.hatch.build.targets.wheel]
packages = ["src/test"]

[tool.hatch.version]
source = "vcs"
